package com.mastermind;

class MastermindConsole extends Mastermind {
    public static void main(String[] args) {
        new MastermindConsole().play();
    }
}
