package com.mastermind.models;

import com.mastermind.types.Color;

import java.util.ArrayList;
import java.util.List;

public class Game {

    private static final int MAX_LONG = 10;

    private SecretCombination secretCombination;

    private List<ProposedCombination> proposedCombinations;

    private List<Result> results;

    private int attempts;

    public Game() {
        this.clear();
    }

    public void clear() {
        this.secretCombination = new SecretCombination();
        this.proposedCombinations = new ArrayList<>();
        this.results = new ArrayList<>();
        this.attempts = 0;
    }

    Memento createMemento() {
        return new Memento(getSecretCombination(), getProposedCombinationCopy(), getResultsCopy(), getAttempts());
    }

    public void addProposedCombination(List<Color> colors) {
        ProposedCombination proposedCombination = new ProposedCombination(colors);
        this.proposedCombinations.add(proposedCombination);
        this.results.add(this.secretCombination.getResult(proposedCombination));
        this.attempts++;
    }

    public boolean isLooser() {
        return this.attempts == Game.MAX_LONG;
    }

    public boolean isWinner() {
        return this.results.get(this.attempts - 1).isWinner();
    }

    public int getAttempts() {
        return this.attempts;
    }

    public List<Color> getColors(int position) {
        return this.proposedCombinations.get(position).colors;
    }

    public int getBlacks(int position) {
        return this.results.get(position).getBlacks();
    }

    public int getWhites(int position) {
        return this.results.get(position).getWhites();
    }

    public int getWidth() {
        return Combination.getWidth();
    }

    private List<Result> getResultsCopy() {
        List<Result> resultsCopy = new ArrayList<>();
        for (Result result : results) {
            Result resultCopy = result;
            resultsCopy.add(resultCopy);
        }
        return resultsCopy;
    }

    private List<ProposedCombination> getProposedCombinationCopy() {
        List<ProposedCombination> proposedCombinationsCopy = new ArrayList<>();
        for (ProposedCombination proposedCombination : proposedCombinations) {
            ProposedCombination resultCopy = proposedCombination;
            proposedCombinationsCopy.add(resultCopy);
        }
        return proposedCombinationsCopy;
    }

    private SecretCombination getSecretCombination() {
        return secretCombination;
    }

    public void set(Memento memento) {
        this.secretCombination = memento.getSecretCombination();
        this.proposedCombinations = memento.getProposedCombinations();
        this.results = memento.getResults();
        this.attempts = memento.getAttempts();
    }

}
