package com.mastermind.models;

public enum StateValue {
    INITIAL,
    IN_GAME,
    FINAL,
    EXIT;

}
